# DirichletFlowMatching

./: .gitignore  README.md  pyproject.toml
dfm/: __init__.py  loss_and_sample.py  mnist_data.py  mnist_data_test.py  mnist_model.py  models.py  string_data.py  training.py  utils.py  visualising_flows.py
examples/: DFM_MNIST_Training.ipynb  DFM_String_Training.ipynb  Visualising_Discrete_Flow.ipynb
